[gd_scene load_steps=6 format=3 uid="uid://lanxik5khj6m"]

[ext_resource type="Script" path="res://enemy_2.gd" id="1_v4ja8"]
[ext_resource type="Texture2D" uid="uid://bbfkw5ng13ulx" path="res://resources/Slime still png.png" id="2_yo1lo"]
[ext_resource type="PackedScene" uid="uid://codjmc6lnljyv" path="res://Healthbar/Healthbar.tscn" id="3_xu57d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ud8jd"]
radius = 170.766

[sub_resource type="CircleShape2D" id="CircleShape2D_lc4t6"]
radius = 8.0

[node name="enemy 2" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_v4ja8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_yo1lo")

[node name="detect" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect"]
position = Vector2(-2, 7)
shape = SubResource("CircleShape2D_ud8jd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 7)
shape = SubResource("CircleShape2D_lc4t6")

[node name="Healthbar" parent="." instance=ExtResource("3_xu57d")]
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = -10.0

[node name="DamageNumbers" type="Node2D" parent="."]

[node name="DamageButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[connection signal="body_entered" from="detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="detect" to="." method="_on_detect_body_exited"]
[connection signal="pressed" from="DamageButton" to="." method="_on_damage_button_pressed"]
